# Tic-Tac-Toe

./: CMakeLists.txt  README.md  board.cpp  board_middleware.h  generate_moves.cpp  logic.h  main.cpp
website/: index.html  style.css
